# WTLFU-cPlusPlus

./: README.md  ReadMe  W-tiny LFU.pptx
WtinyLfuSub/: BasicSettings.h  CMakeLists.txt  Simulator.cpp  Stopwatch.h  main.cpp  multi1.trc
WtinyLfuSub/Admission/: Admittor.h  Frequency.h  TinyLfu.h
WtinyLfuSub/Admission/countmin4/: ClimberResetCountMin4.cpp  ClimberResetCountMin4.h  IncrementalResetCountMin4.h  PeriodicResetCountMin4.h  countMin4.cpp  countMin4.h
WtinyLfuSub/Admission/countmin64/: countMin64.h  countMin64TLfu.h
WtinyLfuSub/Admission/perfect/: PerfectFrequency.h
WtinyLfuSub/Admission/table/: RandomRemovalFrequencyTable.h
WtinyLfuSub/Admission/tinycache/: HashFunctionPraser.h  HashedItem.h  TinyCacheAdapter.h  TinySetIndexing.h  tinyCache.h  tinyCacheSketch.h
WtinyLfuSub/membership/bloom/: bloomFilter.h
WtinyLfuSub/policy/: AccessEvent.h  Policy.h  PolicyStats.h
WtinyLfuSub/policy/sketch/: WindowTinyLfuPolicy.h
WtinyLfuSub/policy/sketch/climbing/: AbstractClimber.h  HillClimber.h  HillClimberType.h  HillClimberWindowTinyLfuPolicy.h
WtinyLfuSub/policy/sketch/climbing/gradient/: Adam.h  AmsGrad.h  Nadam.h  Stochastic.h
WtinyLfuSub/policy/sketch/climbing/hill/: SimpleClimber.h
